--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
     <h1>UI/UX Evening Task</h1>
     <ol>
-        <li><a href="">Table</a></li>
-        <li><a href="">Wikipedia</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Admin panel</a></li>
-        <li><a href="">Gallery</a></li>
-        <li><a href="">Portfolio</a></li>
+        <li><a href="file:///C:/Users/ASUS/Desktop/UIUXEVE-TASK/Table.html">Table</a></li>
+        <li><a href="file:///C:/Users/ASUS/Desktop/UIUXEVE-TASK/Wikipedia.html">Wikipedia</a></li>
+        <li><a href="file:///C:/Users/ASUS/Desktop/UIUXEVE-TASK/Blog.html">Blog</a></li>
+        <li><a href="file:///C:/Users/ASUS/Desktop/UIUXEVE-TASK/Adminpanel.html">Admin panel</a></li>
+        <li><a href="file:///C:/Users/ASUS/Desktop/UIUXEVE-TASK/Gallery.html">Gallery</a></li>
+        <li><a href="file:///C:/Users/ASUS/Desktop/UIUXEVE-TASK/Socialmediasite.html">Social Media Site</a></li>
         
     </ol>
 </body>
