--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>UI/UX Evening Task</h1>
+    <h1>UI/UX Evening Taskss</h1>
     <ol>
         <li><a href="file:///C:/Users/ASUS/Desktop/UIUXEVE-TASK/Table.html">Table</a></li>
         <li><a href="file:///C:/Users/ASUS/Desktop/UIUXEVE-TASK/Wikipedia.html">Wikipedia</a></li>
